[java] Use Java built-in Base64 to generate randomString
Currently we use DatatypeConverter to generate random Base64
Strings in DataGenerator.java. This patch changes to use the
Java built-in Base64 class instead.

Change-Id: I99d511bb8c161159b3ee477460246bc368cc2979
Reviewed-on: http://gerrit.cloudera.org:8080/15127
Tested-by: Grant Henke <granthenke@apache.org>
Reviewed-by: Alexey Serbin <aserbin@cloudera.com>